HW6 ready for check